syntax = "proto3";

package twopcpb;

service Cluster {
  rpc Connection(stream Message) returns (stream Message){}
  rpc Set(SetRequest) returns (EmptyMessage){}
}

enum messageType {
  VoteRequest   = 0;
  VoteCommit    = 1;
  VoteAbort     = 2;
  GlobalCommit  = 3;
  GlobalAbort   = 4;
  GlobalRequest = 5;
  ACK           = 6;
}

message Message {
  uint64 ClientID         = 1;
  messageType messageType = 2;
  uint64 requestID        = 3;
  // Substantial request
  bytes payload           = 4;
}

message EmptyMessage {
}

message SetRequest {
  bytes payload   = 1;
}
